--- a/.prettierrc
+++ b/.prettierrc
@@ -1,13 +1,12 @@
 {
 	"arrowParens": "always",
+	"bracketSameLine": true,
 	"bracketSpacing": true,
 	"semi": true,
 	"useTabs": true,
 	"tabWidth": 2,
-	"bracketSameLine": true,
-	"trailingComma": "es5",
 	"singleQuote": false,
-	"htmlWhitespaceSensitivity": "strict",
-	"printWidth": 100,
-	"quoteProps": "as-needed"
+	"trailingComma": "es5",
+	"singleAttributePerLine": true,
+	"htmlWhitespaceSensitivity": "ignore"
 }
