--- a/package.json
+++ b/package.json
@@ -1,12 +1,58 @@
 {
-  "name": "template",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+	"name": "@underflow/core",
+	"type": "module",
+	"version": "0.0.1",
+	"main": "./src/lib/Extensions/index.ts",
+	"types": "./src/types/index.ts",
+	"scripts": {
+		"dev": "concurrently \"astro dev\" \"pnpm run websocket\"",
+		"build": "astro build",
+		"preview": "concurrently \"astro preview\" \"pnpm run websocket\"",
+		"astro": "astro",
+		"test:e2e": "cypress run",
+		"test:unit": "vitest",
+		"format": "prettier --write .",
+		"websocket": "node --loader ts-node/esm ./ws-server.js"
+	},
+	"dependencies": {
+		"7zip-min": "^1.4.4",
+		"@astrojs/mdx": "^0.17.2",
+		"@astrojs/node": "^5.0.4",
+		"@astrojs/svelte": "^2.0.2",
+		"@astrojs/tailwind": "^3.0.1",
+		"@astropub/icons": "^0.2.0",
+		"astro": "^2.0.16",
+		"astro-icon": "^0.8.0",
+		"axios": "^1.3.4",
+		"cheerio": "1.0.0-rc.12",
+		"concurrently": "^7.6.0",
+		"express": "^4.18.2",
+		"js-cookie": "^3.0.1",
+		"node-fetch": "^3.3.0",
+		"pg": "^8.10.0",
+		"pg-format": "^1.0.4",
+		"svelte": "^3.54.0",
+		"svelte-markdown": "^0.2.3",
+		"svelte-modals": "^1.2.1",
+		"svelte-simple-modal": "^1.5.2",
+		"tailwindcss": "^3.0.24",
+		"vitest": "^0.29.2",
+		"ws": "^8.12.1",
+		"xml2json": "^0.12.0"
+	},
+	"devDependencies": {
+		"@types/7zip-min": "^1.3.1",
+		"@types/js-cookie": "^3.0.3",
+		"@types/node-fetch": "^2.6.2",
+		"@types/pg": "^8.6.6",
+		"@types/pg-format": "^1.0.2",
+		"@types/ws": "^8.5.4",
+		"@types/xml2json": "^0.11.4",
+		"cypress": "^12.7.0",
+		"prettier": "^2.8.4",
+		"sass": "^1.58.3",
+		"svelte-preprocess": "^5.0.1",
+		"ts-node": "^10.9.1",
+		"typescript": "^4.9.5"
+	}
 }
